--- a/server/views/caseList/alt/index.pug
+++ b/server/views/caseList/alt/index.pug
@@ -9,18 +9,18 @@ block content
         div.pure-u-1
             h2.heading-medium Case list
 
-            div.form-group
-                input.form-control(type="text" id="caseListFilter" placeholder="Search for case..." title="Filter the case list by text content")
+            div.pure-g
+                div.pure-u-1.pure-u-md-2-5.form-group
+                    input.form-control(type="text" id="caseListFilter" placeholder="Search for case..." title="Filter the case list by text content")
 
             if user.role === 'CA'
                 include ./CATable
 
             if user.role === 'RO'
-                include ../ROTable
+                include ./ROTable
 
             if user.role === 'DM'
-                include ../DMTable
+                include ./DMTable
 
 block append scripts
-    //script(src="/public/javascripts/pagination.js?"+version)
     script(src="/public/javascripts/caseListFilter.js?"+version)
