Fix missing title

--- a/server/views/pdf/createLicenceTaskList.pug
+++ b/server/views/pdf/createLicenceTaskList.pug
@@ -9,7 +9,7 @@ block content
     include ../includes/personalDetailsSummary
 
     div.pure-u-1.borderBottom
-        h2.heading-large #{templateTitle}
+        h2.heading-large #{versionInfo.templateLabel}
         p You need to complete the following before you create the licence
 
     div.paddingBottom
