Create licence tasklist goes back to templates select not main tasklist

--- a/server/views/pdf/createLicenceTaskList.pug
+++ b/server/views/pdf/createLicenceTaskList.pug
@@ -4,7 +4,7 @@ include ../taskList/includes/startContinueViewButton
 block content
 
     div.back-link-container
-        include ../includes/backToTaskList
+        a#backBtn.link-back(href="/hdc/pdf/select/" + bookingId) Back
 
     include ../includes/personalDetailsSummary
 
