--- a/server/views/pdf/select.pug
+++ b/server/views/pdf/select.pug
@@ -5,7 +5,7 @@ block content
 
     div.pure-g
         div.pure-u-1
-            include ../includes/back
+            include ../includes/backToTaskList
             include ../includes/personalDetailsSummary
             +errorBannerWithDetail(errors, [
                 {field: 'decision', message: 'Select a licence type'}
