--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -18,5 +18,7 @@ div.largeMarginBottom
         div.pure-u-1.pure-u-md-1-4.center
             if licenceStatus.decisions.curfewAddressApproved === 'rejected'
                 +startContinueView(licenceStatus.tasks.curfewAddress, "/hdc/proposedAddress/rejected/" + prisonerInfo.bookingId)
+            else if licenceStatus.tasks.curfewAddress === 'DONE' && licenceStatus.decisions.curfewAddressApproved === 'unstarted'
+                a(href='/hdc/proposedAddress/rejected/' + prisonerInfo.bookingId) Change
             else
                 +startContinueView(licenceStatus.tasks.curfewAddress, "/hdc/proposedAddress/optOut/" + prisonerInfo.bookingId)
