--- a/server/views/curfew/addressSafety.pug
+++ b/server/views/curfew/addressSafety.pug
@@ -7,7 +7,7 @@ block content
 
     div.pure-g.pure-u-1
         div.borderBottomLight
-            include ../includes/backToTaskList
+            include ../includes/back
             include ../includes/personalDetailsSummary
 
             h2.heading-large Proposed address decision
