--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -7,7 +7,7 @@ block content
 
     div.pure-g.pure-u-1
         div.borderBottomLight
-            include ../includes/backToTaskList
+            include ../includes/back
             include ../includes/personalDetailsSummary
 
             h2.heading-large Proposed curfew address
@@ -23,7 +23,7 @@ block content
             div.pure-g.largePaddingBottom
                 div.pure-u-1.pure-u-sm-5-12.pure-g
                     div.form-group.inline.paddingTop
-                        p Does the main occupier consent to HDC?
+                        h3.heading-medium Does the main occupier consent to HDC?
 
                         div.multiple-choice(data-target="consentForm")
                             input#hdcConsentYes(type="radio" checked=address.consent === 'Yes' name="consent" value="Yes")
