--- a/server/views/proposedAddress/curfewAddress.pug
+++ b/server/views/proposedAddress/curfewAddress.pug
@@ -2,7 +2,7 @@ extends ../layout
 include ./includes/addressForm
 block content
     -var savedAddress = data || {}
-    -var action = submitPath ? `${submitPath}${bookingId}` : undefined;
+    -var action = submitAction ? `/hdc/proposedAddress/curfewAddress/${submitAction}/${bookingId}` : undefined;
 
     div.pure-g.pure-u-1
         include ../includes/back
@@ -13,23 +13,9 @@ block content
     form(method="post" action=action)
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="bookingId" value=bookingId || '')
+        input(type="hidden" name="action" value=submitAction || 'do')
         div.paddingBottom.largeMarginBottom
             +addressForm(0)
-
-        //div.form-group.inline.paddingBottom
-        //    p Do you want to add an alternative address?
-        //
-        //    div.multiple-choice(data-target="alternativeAddress")
-        //        input#alternativeAddressYes(type="radio" checked=savedAddress.alternativeAddress === 'Yes' name="alternativeAddress" value="Yes")
-        //        label(for="alternativeAddressYes") Yes
-        //    div.multiple-choice
-        //        input#alternativeAddressNo(type="radio" checked=savedAddress.alternativeAddress !== 'Yes' name="alternativeAddress" value="No")
-        //        label(for="alternativeAddressNo") No
-        //
-        //div#alternativeAddress.js-hidden
-        //    div.paddingBottom.largeMarginBottom
-        //        h3.heading-medium Alternative address
-        //        +addressForm(1, 'alternative')
 
         include ../includes/formButtons
 
