--- a/server/views/send/templates/roToCaTemplate.pug
+++ b/server/views/send/templates/roToCaTemplate.pug
@@ -9,8 +9,8 @@ block content
 
     div.pure-g.largePaddingBottom
         div.pure-u-1.pure-u-2-3
-            h2.heading-large.midPaddingBottom Submit to the Prison Case Admin
-            p.lede The HDC licence information is ready to be submitted to the Prison Case Admin or you can return to the task list and send it later.
+            h2.heading-large.midPaddingBottom Submit to prison case admin
+            p.lede The case is ready to be submitted to prison case admin.
 
             p The information will be submitted to:
 
