--- a/server/views/sent/dmToCa.pug
+++ b/server/views/sent/dmToCa.pug
@@ -4,4 +4,4 @@ block content
 
     include ./mixins/sentMixin
 
-    +sentContent('Submitted to Prison Case Admin')
+    +sentContent('Submitted to prison case admin')
