--- a/assets/sass/caselist.scss
+++ b/assets/sass/caselist.scss
@@ -25,3 +25,20 @@
         color: black;
     }
 }
+
+#hdcEligiblePrisoners.sortcolumns {
+    thead tr .sortable {
+        background-image: url($path+'/bg.gif');
+        background-repeat: no-repeat;
+        background-position: 95% 50%;
+        cursor: pointer;
+    }
+    thead tr .headerSortUp {
+        background-image: url($path+'/asc.gif');
+    }
+    thead tr .headerSortDown {
+        background-image: url($path+'/desc.gif');
+    }
+}
+
+#hdcEligiblePrisoners tr:nth-child(even) {background-color: $highlight-colour}
