--- a/server/views/caseList/alt/index.pug
+++ b/server/views/caseList/alt/index.pug
@@ -24,3 +24,5 @@ block content
 
 block append scripts
     script(src="/public/javascripts/caseListFilter.js?"+version)
+    script(src="/public/javascripts/jquery.tablesorter.min.js?"+version)
+    script(src="/public/javascripts/caseListSort.js?"+version)
