--- a/server/views/review/licenceDetails.pug
+++ b/server/views/review/licenceDetails.pug
@@ -4,7 +4,7 @@ include ../includes/errorBannerWithDetail
 
 block content
 
-    include ../includes/back
+    include ../includes/backToTaskList
 
     if Object.keys(errorObject).length !== 0
         div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
