Action-specific routes

--- a/server/views/curfew/addressSafety.pug
+++ b/server/views/curfew/addressSafety.pug
@@ -44,5 +44,7 @@ block content
                                     if address.unsafeReason
                                         | #{address.unsafeReason}
 
-
-            include ../includes/saveAndReturn
+            if (action === 'change')
+                include ../includes/formSubmit
+            else
+                include ../includes/saveAndReturn
