--- a/server/views/risk/riskManagement.pug
+++ b/server/views/risk/riskManagement.pug
@@ -66,4 +66,8 @@ block content
                             | #{data.victimLiaisonDetails}
 
         include ../includes/roModificationWarning
-        include ../includes/saveAndReturn
+
+        if (action === 'change')
+            include ../includes/formSubmit
+        else
+            include ../includes/saveAndReturn
