--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -4,7 +4,6 @@ include ../proposedAddress/includes/addressDetail
 block content
 
     -var address = data || {}
-    -var submitAction = action ? `/hdc/curfew/curfewAddressReview/${action}/${bookingId}` : undefined;
 
     div.pure-g.pure-u-1
         div.borderBottomLight
@@ -17,7 +16,7 @@ block content
 
                 +addressDetail('curfew', address)
 
-        form(method="post" action=submitAction)
+        form(method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="bookingId" value=bookingId || '')
             input(type="hidden" name="addressIndex" value=address.index || '')
