--- a/server/views/reporting/reportingDate.pug
+++ b/server/views/reporting/reportingDate.pug
@@ -16,7 +16,7 @@ block content
     form#reportingForm(method='POST')
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="bookingId" value=bookingId)
-        input(type="hidden" name="templateName" value=templateName)
+        input(type="hidden" name="path" value=action)
 
         div#address.pure-g
             div#error-anchor.pure-u-1-8
