--- a/server/views/taskList/tasks/curfewAddressTask.pug
+++ b/server/views/taskList/tasks/curfewAddressTask.pug
@@ -25,7 +25,7 @@ div.paddingBottom
             div.pure-u-1.pure-u-md-1-4.center
                 if user.role === 'RO'
                     if curfewAddressApproved === 'rejected'
-                        a(href='/hdc/curfew/curfewAddressReview/' + prisonerInfo.bookingId) Change
+                        a(href='/hdc/curfew/curfewAddressReview/' + prisonerInfo.bookingId).taskListAction Change
                     else
                         +startContinueView(licenceStatus.tasks.curfewAddressReview, "/hdc/curfew/curfewAddressReview/" + prisonerInfo.bookingId)
                 else if user.role === 'CA' && postApproval
