--- a/server/views/contact/ro.pug
+++ b/server/views/contact/ro.pug
@@ -8,26 +8,32 @@ block content
 
     div.pure-g.largePaddingBottom
         div.pure-u-1
-            h2.heading-large.midPaddingBottom Responsible officer
+            div.pure-u-2-3
+                h2.heading-large.midPaddingBottom Responsible officer
+            div.pure-u-1-3.largeMarginTop.alignRight.change-details
+                a(href="../ro") View all
 
-            if (contact)
-                div.pure-u-1
-                    table#contact.largeMarginBottom
-                        thead
-                            tr
-                                th Name
-                                th Organisation
-                                th Job Role
-                                th Email
-                                th Telephone
-                        tbody
-                            tr.contact
-                                td.name #{contact.first_name} #{contact.last_name}
-                                td.organisation #{contact.organisation}
-                                td.jobRole #{contact.job_role}
-                                td.email #{contact.email}
-                                td.telephone #{contact.telephone}
+            div.pure-u-1
+                if (contact)
+                    div.pure-u-1
+                        table#contact.largeMarginBottom
+                            thead
+                                tr
+                                    th Name
+                                    th Organisation
+                                    th Job Role
+                                    th Email
+                                    th Telephone
+                            tbody
+                                tr.contact
+                                    td.name #{contact.first} #{contact.last}
+                                    td.organisation #{contact.organisation}
+                                    td.jobRole #{contact.jobRole}
+                                    td.email #{contact.email}
+                                    td.telephone #{contact.telephone}
 
-            else
-                p No contact details found
+                else
+                    p No contact details found
+
+
 
