--- a/server/views/contact/roList.pug
+++ b/server/views/contact/roList.pug
@@ -24,10 +24,10 @@ block content
                         if roUsers && roUsers.length > 0
                             each contact, index in roUsers
                                 tr.hdcEligible(class=index % 2 === 1 ? 'greyRow' : undefined)
-                                    td.username #{contact.staff_id}
-                                    td.name #{contact.first_name} #{contact.last_name}
+                                    td.username #{contact.deliusId}
+                                    td.name #{contact.first} #{contact.last}
                                     td.organisation #{contact.organisation}
-                                    td.jobRole #{contact.job_role}
+                                    td.jobRole #{contact.jobRole}
                                     td.email #{contact.email}
                                     td.telephone #{contact.telephone}
 
