Fix search results RO name

--- a/server/views/search/includes/resultsTable.pug
+++ b/server/views/search/includes/resultsTable.pug
@@ -59,7 +59,7 @@ else
 
                     td.ro
                         if prisoner.com
-                            | #{prisoner.com}
+                            | #{prisoner.com.name}
 
                     td.status
                         if prisoner.status
