--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -43,8 +43,11 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
             | Responsible officer
             if (prisonerInfo.com)
                 span#prisonerComName.block.bold
-                    if (prisonerInfo.com && prisonerInfo.com.deliusId)
-                        a(href="/hdc/contact/ro/" + prisonerInfo.com.deliusId) #{prisonerInfo.com.name}
+                    if (prisonerInfo.com)
+                        if(prisonerInfo.com.deliusId)
+                            a(href="/hdc/contact/ro/" + prisonerInfo.com.deliusId) #{prisonerInfo.com.name}
+                        else
+                            | #{prisonerInfo.com.name}
 
         div.midMarginBottom
             | Location
