--- a/server/views/pdf/createLicenceTaskList.pug
+++ b/server/views/pdf/createLicenceTaskList.pug
@@ -17,6 +17,9 @@ block content
             include tasks/sentenceInfoTask
 
         div.taskListItem.borderBottom
+            include tasks/firstNightTask
+
+        div.taskListItem.borderBottom
             include tasks/reportingTask
 
         div.taskListItem.borderBottom
