--- a/server/views/taskList/tasks/createLicenceTask.pug
+++ b/server/views/taskList/tasks/createLicenceTask.pug
@@ -6,7 +6,7 @@ div.paddingBottom
             | #{statusLabel}
         div.pure-u-1.pure-u-md-1-4.center
             if postApproval && licenceStatus.stage !== 'MODIFIED_APPROVAL'
-                if user.role === 'CA' && licenceStatus.decisions.approved
+                if user.role === 'CA' && licenceStatus.decisions.approved && licenceStatus.decisions.curfewAddressApproved !== 'withdrawn'
                     a#createPdf.taskListAction.center.button(href="/hdc/pdf/select/" + bookingId role="button") Continue
 
 
