--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -1,5 +1,5 @@
 div.largeMarginBottom
-    h2.heading-medium Proposed address / opt out request
+    h2.heading-medium Curfew address and opt out
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
             if licenceStatus.tasks.curfewAddress === 'UNSTARTED'
