--- a/server/views/taskList/tasks/caSubmitApprovalTask.pug
+++ b/server/views/taskList/tasks/caSubmitApprovalTask.pug
@@ -11,7 +11,7 @@ div.paddingBottom
             else if licenceStatus.decisions.finalChecksRefused
                 | Submission unavailable - HDC refused
             else
-                | Submission unavailable - Tasks not yet complete
+                | Not completed
 
         if allowedTransition === 'caToDm'
             div.pure-u-1.pure-u-md-1-4.center
