Post-decision withdraw address tasks

--- a/server/views/curfew/includes/newAddressForm.pug
+++ b/server/views/curfew/includes/newAddressForm.pug
@@ -13,3 +13,4 @@ form(method="post")
                     label(for="no") No
 
         include ../../includes/formSubmit
+            a#reinstate.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/review/address/" + bookingId role="button") Reinstate address
