--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -24,7 +24,9 @@ block content
 
             if address
                 div.pure-u-1.pure-u-1-2.midPaddingBottom
-                    The following address has been requested by the offender and checked by the RO.
+                    p The following address has been requested by the offender
+                    if licenceStatus.tasks.curfewAddressReview === 'DONE'
+                        | and checked by the RO.
 
                 +addressDetail('curfew', address, review, addressSafety)
 
