--- a/server/views/taskList/dmTasks.pug
+++ b/server/views/taskList/dmTasks.pug
@@ -10,7 +10,7 @@ block tasks
             include tasks/refusalTask
 
 
-    else if licenceStatus.decisions.curfewAddressApproved === 'rejected'
+    else if ['rejected', 'withdrawn'].includes(licenceStatus.decisions.curfewAddressApproved)
         div.taskListItem.borderBottom.largeMarginBottom
             include tasks/eligibilitySummaryTask
 
